Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127982

The QLineSeries hovered signal is only re-emitted when the mouse leaves the hover area.

XMLWordPrintable

    • 19654929d (dev), 7c6d5655f (6.8)

      QLineSeries only emits the hovered signal if the mouse leaves the hover area before the next hover. This means that only the first hover works correctly. Subsequent hovers do not work unless the mouse leaves the hover area and re-enters it.

      To reproduce the issue:

      1. Run the attached example project.
      2. Hover over one of the circles.
      3. Hover over the other circles without leaving the circles or the marked line.

      The hover signal is not emitted unless the mouse moves outside the circles.

        1. qlineseries-hover-show-tooltip.zip
          4 kB
          Mehdi Belila
        2. qtbug127982_diag.diff
          1.0 kB
          Friedemann Kleint
        3. qtbug127982.zip
          4 kB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            mahdi.belila Mehdi Belila
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes