QLineSeries/QSplineSeries: Fix hovering over adjacent objects

Add a handler for hoverMoveEvent() tracking the last matched point.

Pick-to: 6.8
Fixes: QTBUG-127982
Change-Id: I1b534f113154503b34a5c4bef7928032688f7e4b
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>