src/charts/splinechart/splinechartitem_p.h
@@ -49,6 +49,7 @@ protected:
     void updateChart(const QList<QPointF> &oldPoints, const QList<QPointF> &newPoints, int index) override;
     void mousePressEvent(QGraphicsSceneMouseEvent *event) override;
     void hoverEnterEvent(QGraphicsSceneHoverEvent *event) override;
+    void hoverMoveEvent(QGraphicsSceneHoverEvent *event) override;
     void hoverLeaveEvent(QGraphicsSceneHoverEvent *event) override;
     void mouseReleaseEvent(QGraphicsSceneMouseEvent *event) override;
     void mouseDoubleClickEvent(QGraphicsSceneMouseEvent *event) override;
@@ -75,6 +76,7 @@ private:
     bool m_pointLabelsClipping;
 
     QPointF m_lastMousePos;
+    QPointF m_lastHoveredMatchedPos;
     bool m_mousePressed;
 
     friend class SplineAnimation;
